--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+}
+
+/* Tablet */
+@media (max-width: 768px) {
+  .sidebar__container {
+    border-radius: 10px;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .borderRadius {
+    /* position: relative; */
+    border-radius: 10px;
+  }
+
+  .user img {
+    margin-right: 10px;
+    height: 25px;
+    width: 25px;
+  }
+
+  .user button {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+  }
+
+  .col-md-1 {
+    padding: 0;
+  }
+}
+
+/* Laptop */
+@media (max-width: 1200px) {
 }
