--- a/src/pages/Signup/Signup.css
+++ b/src/pages/Signup/Signup.css
@@ -1,3 +1,34 @@
+.signup-profile__container {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  left: 40%;
+}
+.signup-profile-pic {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 1px solid gray;
+}
+.image-upload-label {
+  position: absolute;
+  /* top: 90px;
+  right: 40px; */
+  top: 32px;
+  right: 25px;
+}
+
+.add-picture-icon {
+  color: green;
+  cursor: pointer;
+  /* background-color: #fff; */
+  background-color: transparent;
+  z-index: 999;
+
+  padding: 60px 15px 0px 15px;
+}
+
 .bg__link {
   text-decoration: none;
   padding-left: 10px;
